--- a/pages/categories.html
+++ b/pages/categories.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mindora • Categories</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="/mindora/assets/css/custom.css" rel="stylesheet">
-    <link href="/mindora/assets/css/color.css" rel="stylesheet">
-    <link href="/mindora/assets/css/light.css" rel="stylesheet">
-    <link href="/mindora/assets/css/dark.css" rel="stylesheet">
-    <link href="/mindora/assets/css/responsive.css" rel="stylesheet">
-  </head>
+    <link href="./assets/css/style.css?v=1" rel="stylesheet">
+    <link href="./assets/css/color.css" rel="stylesheet">
+    <link href="./assets/css/light.css" rel="stylesheet">
+    <link href="./assets/css/dark.css" rel="stylesheet">
+    <link href="./assets/css/responsive.css" rel="stylesheet">
+    <link href="./assets/css/style.css?v=1" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/style.css">
+</head>
   <body>
     <div class="container my-3">
       <div id="header"></div>
@@ -27,8 +29,8 @@
       <div id="footer" class="mt-4"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
-    <script src="/mindora/assets/js/components.js"></script>
-    <script src="/mindora/assets/js/blog.js"></script>
+    <script src="./assets/js/components.js"></script>
+    <script src="./assets/js/blog.js"></script>
     <script>
       $(function(){
         window.Components.init();
