--- a/pages/style-guide.html
+++ b/pages/style-guide.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mindora • Style Guide</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="/mindora/assets/css/app.min.css?v=1" rel="stylesheet">
-    <link href="/mindora/assets/css/color.css" rel="stylesheet">
-  </head>
+    <link href="./assets/css/style.css?v=1" rel="stylesheet">
+    <link href="./assets/css/color.css" rel="stylesheet">
+    <link href="./assets/css/responsive.css" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/style.css">
+</head>
   <body>
     <svg width="0" height="0" style="position:absolute"><defs><linearGradient id="accent-gradient" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="var(--accent-start)"/><stop offset="100%" stop-color="var(--accent-end)"/></linearGradient></defs></svg>
     <div class="container my-3">
@@ -77,9 +79,9 @@
       <div id="footer"></div>
     </div>
 
-    <button id="themeToggle" class="btn btn-outline-secondary rounded-circle position-fixed end-0 bottom-0 m-4 theme-toggle-btn" aria-label="Toggle theme"></button>
+    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="/mindora/assets/js/app.min.js?v=1"></script>
+    <script src="./assets/js/app.min.js?v=1"></script>
   </body>
   </html>
