--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
   <link href="./assets/css/responsive.css" rel="stylesheet">
   <link href="./assets/css/color.css" rel="stylesheet">
 
+  <style>
+    .blog-card{display:block;border-radius:1rem;overflow:hidden;background:var(--bs-body-bg);border:1px solid rgba(0,0,0,.075)}
+    .blog-card-img{width:100%;padding-top:56.25%;background-size:cover;background-position:center}
+    .blog-card-body{padding:1rem}
+  </style>
+
 
 <script type="text/javascript" id="www-widgetapi-script" src="https://www.youtube.com/s/player/b32979e9/www-widgetapi.vflset/www-widgetapi.js" async=""></script>
 <script src="https://www.youtube.com/iframe_api"></script>
