new big update with more fixes part 1

--- a/pages/videos.html
+++ b/pages/videos.html
@@ -17,7 +17,7 @@
   <link href="../assets/css/responsive.css" rel="stylesheet">
   <link href="../assets/css/color.css" rel="stylesheet">
 </head>
-  <body style="background: url(../assets/img/background/bg2.png); background-size: cover; background-position: center; background-attachment: fixed; ">
+  <body style="background: url(../assets/img/background/bg.avif); background-size: cover; background-position: center; background-attachment: fixed; ">
     <svg width="0" height="0" style="position:absolute"><defs><linearGradient id="accent-gradient" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="var(--accent-start)"/><stop offset="100%" stop-color="var(--accent-end)"/></linearGradient></defs></svg>
     <div class="container my-3">
       <div id="header"></div>
@@ -32,23 +32,51 @@
       <section class="mb-5">
         <div class="row g-4">
           <div class="col-12 col-md-6">
-            <div class="ratio ratio-16x9 border rounded-4 shadow glass">
-              <iframe src="https://www.youtube.com/embed/H_uc-uQ3Nkc?si=EAdKlFOVZ9F4tY_U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card h-100 glass">
+              <div class="video-card ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/H_uc-uQ3Nkc?si=EAdKlFOVZ9F4tY_U" title="Breathing practice video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="play-overlay"><i class="bi bi-play-circle"></i></div>
+              </div>
+              <div class="card-body">
+                <h3 class="h6 video-meta-title mb-1">Intro to paced nasal breathing</h3>
+                <p class="video-meta-desc mb-0">Gentle technique to lengthen exhale and reset stress.</p>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="ratio ratio-16x9 border rounded-4 shadow glass">
-              <iframe src="https://www.youtube.com/embed/vI5MzT-wIjs?si=7FO2tBP82JoEqmSm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card h-100 glass">
+              <div class="video-card ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/vI5MzT-wIjs?si=7FO2tBP82JoEqmSm" title="Aerobic basics video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="play-overlay"><i class="bi bi-play-circle"></i></div>
+              </div>
+              <div class="card-body">
+                <h3 class="h6 video-meta-title mb-1">Low‑impact aerobic movement</h3>
+                <p class="video-meta-desc mb-0">Foundational steps and pacing for beginners.</p>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="ratio ratio-16x9 border rounded-4 shadow glass">
-              <iframe src="https://www.youtube.com/embed/d4S4twjeWTs?si=fg-51IJlrggtzlcn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card h-100 glass">
+              <div class="video-card ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/d4S4twjeWTs?si=fg-51IJlrggtzlcn" title="Intervals how‑to video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="play-overlay"><i class="bi bi-play-circle"></i></div>
+              </div>
+              <div class="card-body">
+                <h3 class="h6 video-meta-title mb-1">Simple interval training</h3>
+                <p class="video-meta-desc mb-0">Alternate brisk marching and recovery breathing.</p>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <div class="ratio ratio-16x9 border rounded-4 shadow glass">
-              <iframe src="https://www.youtube.com/embed/2R5kBDw9Mog?si=W7-wwhq4xKfe5EKZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card h-100 glass">
+              <div class="video-card ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/2R5kBDw9Mog?si=W7-wwhq4xKfe5EKZ" title="Mobility routine video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="play-overlay"><i class="bi bi-play-circle"></i></div>
+              </div>
+              <div class="card-body">
+                <h3 class="h6 video-meta-title mb-1">Mobility + breath for joints</h3>
+                <p class="video-meta-desc mb-0">Gentle poses paired with calm nasal breathing.</p>
+              </div>
             </div>
           </div>
         </div>
