--- a/pages/account.html
+++ b/pages/account.html
@@ -16,7 +16,7 @@
   <link href="../assets/css/color.css" rel="stylesheet">
   
 </head>
-  <body style="background: url(../assets/img/background/bg2.png); background-size: cover; background-position: center; background-attachment: fixed; ">
+  <body style="background: url(../assets/img/background/bg.avif); background-size: cover; background-position: center; background-attachment: fixed; ">
     <div class="container my-3">
       <div id="header"></div>
 
