--- a/pages/meditation.html
+++ b/pages/meditation.html
@@ -14,7 +14,7 @@
   <link href="../assets/css/responsive.css" rel="stylesheet">
   <link href="../assets/css/color.css" rel="stylesheet">
 </head>
-  <body style="background: url(../assets/img/background/bg.avif); background-size: cover; background-position: center; background-attachment: fixed; ">
+  <body style="background: url(../assets/img/background/bg2.png); background-size: cover; background-position: center; background-attachment: fixed; ">
     <svg width="0" height="0" style="position:absolute"><defs><linearGradient id="accent-gradient" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="var(--accent-start)"/><stop offset="100%" stop-color="var(--accent-end)"/></linearGradient></defs></svg>
     <div class="container my-3">
       <div id="header"></div>
@@ -22,7 +22,7 @@
       <section class="border rounded-4 shadow p-4 glass mb-4 page-hero">
         <h1 class="display-6">Begin with calm, breath‑focused meditation</h1>
         <p class="text-muted">Approachable practices use paced exhale and gentle awareness to reduce stress, improve focus, and complement aerobic training week to week.</p>
-        <div class="d-flex gap-2 mb-2"><a href="#" class="btn btn-primary rounded-pill btn-cta">Start a session</a><a href="videos.html" class="btn btn-outline-secondary rounded-pill btn-cta">Watch guides</a></div>
+        <div class="d-flex gap-2 mb-2"><a href="#" class="btn btn-primary rounded-pill btn-cta">Start a session</a><a href="/pages/videos.html" class="btn btn-outline-secondary rounded-pill btn-cta">Watch guides</a></div>
         <div class="hero-media" data-bg="https://picsum.photos/seed/meditation-hero/1200/800"></div>
       </section>
 
