--- a/pages/books.html
+++ b/pages/books.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" href="../assets/css/bootstrap/swiper-bundle.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="../assets/css/style.css?v=1" rel="stylesheet">
-    <link href="../assets/css/responsive.css" rel="stylesheet">
-    <link href="../assets/css/color.css" rel="stylesheet">
-  </head>
-  <body style="background: url(../assets/img/background/bg2.png); background-size: cover; background-position: center; background-attachment: fixed; ">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link href="../assets/css/responsive.css" rel="stylesheet">
+  <link href="../assets/css/color.css" rel="stylesheet">
+</head>
+  <body style="background: #ededed; background-size: cover; background-position: center; background-attachment: fixed; ">
     <svg width="0" height="0" style="position:absolute"><defs><linearGradient id="accent-gradient" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="var(--accent-start)"/><stop offset="100%" stop-color="var(--accent-end)"/></linearGradient></defs></svg>
     <div class="container my-3">
       <div id="header"></div>
@@ -24,54 +25,38 @@
       <section class="border rounded-4 shadow p-4 glass mb-4 page-hero">
         <h1 class="display-6">Recommended books on movement and breath</h1>
         <p class="text-muted">Curated titles deepen understanding of aerobic conditioning, stress relief, and practical meditation for sustainable health.</p>
-        <div class="d-flex gap-2 mb-2"><a href="#" class="btn btn-primary rounded-pill btn-cta">See top picks</a><a href="/pages/blog.html" class="btn btn-outline-secondary rounded-pill btn-cta">Read related posts</a></div>
+        <div class="d-flex gap-2 mb-2"><a href="#" class="btn btn-primary rounded-pill btn-cta">See top picks</a><a href="blog.html" class="btn btn-outline-secondary rounded-pill btn-cta">Read related posts</a></div>
         <div class="hero-media" data-bg="https://picsum.photos/seed/books-hero/1200/800"></div>
       </section>
 
+      <section class="mb-3">
+        <div class="d-flex flex-wrap gap-2 align-items-center">
+          <input id="bookSearch" type="search" class="form-control" placeholder="Search books">
+          <div id="bookFilters" class="btn-group" role="group" aria-label="Filter"></div>
+        </div>
+      </section>
       <section class="mb-5">
-        <div class="row g-4">
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card h-100 glass">
-              <img class="card-img-top" src="https://picsum.photos/seed/books-aerobic/800/400" srcset="https://picsum.photos/seed/books-aerobic/800/400 1x, https://picsum.photos/seed/books-aerobic/1600/800 2x" sizes="(min-width: 992px) 33vw, (min-width: 768px) 50vw, 100vw" alt="Aerobic exercise book" loading="lazy" decoding="async">
-              <div class="card-body">
-                <h3 class="h6">Aerobic Exercise: A Practical Approach</h3>
-                <p class="text-muted">Guidelines for safe cardiovascular training.</p>
-                <a class="btn btn-outline-primary rounded-pill" href="https://www.google.com/search?q=aerobic+exercise+book" target="_blank" rel="noopener">View</a>
+        <div id="booksGrid" class="row g-4 blogs-grid"></div>
+      </section>
+
+      <!-- PDF Viewer Modal -->
+      <div class="modal fade pdf-modal" id="pdfViewerModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="pdfTitle">Book</h5>
+              <div class="d-flex align-items-center gap-2">
+                <a id="downloadPdf" href="#" class="btn btn-outline-primary btn-sm" target="_blank"><i class="bi bi-download"></i> Download</a>
+                <a id="openInNewTab" href="#" class="btn btn-outline-secondary btn-sm" target="_blank"><i class="bi bi-box-arrow-up-right"></i> Open</a>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
             </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card h-100 glass">
-              <img class="card-img-top" src="https://picsum.photos/seed/books-meditation/800/400" srcset="https://picsum.photos/seed/books-meditation/800/400 1x, https://picsum.photos/seed/books-meditation/1600/800 2x" sizes="(min-width: 992px) 33vw, (min-width: 768px) 50vw, 100vw" alt="Meditation book" loading="lazy" decoding="async">
-              <div class="card-body">
-                <h3 class="h6">Meditation for Beginners</h3>
-                <p class="text-muted">Step-by-step introduction to mindful breathing.</p>
-                <a class="btn btn-outline-primary rounded-pill" href="https://www.google.com/search?q=meditation+for+beginners+book" target="_blank" rel="noopener">View</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card h-100 glass">
-              <img class="card-img-top" src="https://picsum.photos/seed/books-stress/800/400" srcset="https://picsum.photos/seed/books-stress/800/400 1x, https://picsum.photos/seed/books-stress/1600/800 2x" sizes="(min-width: 992px) 33vw, (min-width: 768px) 50vw, 100vw" alt="Stress management book" loading="lazy" decoding="async">
-              <div class="card-body">
-                <h3 class="h6">Stress Management and Wellness</h3>
-                <p class="text-muted">Evidence-based strategies for resilience.</p>
-                <a class="btn btn-outline-primary rounded-pill" href="https://www.google.com/search?q=stress+management+book" target="_blank" rel="noopener">View</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card h-100 glass">
-              <img class="card-img-top" src="https://picsum.photos/seed/books-mind/800/400" srcset="https://picsum.photos/seed/books-mind/800/400 1x, https://picsum.photos/seed/books-mind/1600/800 2x" sizes="(min-width: 992px) 33vw, (min-width: 768px) 50vw, 100vw" alt="Healthy mind book" loading="lazy" decoding="async">
-              <div class="card-body">
-                <h3 class="h6">The Healthy Mind</h3>
-                <p class="text-muted">Practical tools for mental fitness.</p>
-                <a class="btn btn-outline-primary rounded-pill" href="https://www.google.com/search?q=healthy+mind+book" target="_blank" rel="noopener">View</a>
-              </div>
+            <div class="modal-body">
+              <iframe id="pdfFrame" class="pdf-frame" src="about:blank" title="PDF Viewer"></iframe>
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
       <div id="footer"></div>
     </div>
@@ -80,5 +65,12 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="../assets/js/app.min.js?v=1"></script>
+    <script src="../assets/js/books.js?v=1"></script>
+    <script>
+      $(function(){
+        if(window.Components && window.Components.init){ window.Components.init(); }
+        if(window.BooksIndex){ window.BooksIndex.init('#booksGrid', '#bookSearch', '#bookFilters'); }
+      });
+    </script>
   </body>
   </html>
