--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="../assets/css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/bootstrap/swiper-bundle.min.css">
     <link href="../assets/css/style.css?v=1" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <link href="../assets/css/responsive.css" rel="stylesheet">
   <link href="../assets/css/color.css" rel="stylesheet">
 </head>
-  <body style="background: url(../assets/img/background/bg2.png); background-size: cover; background-position: center; background-attachment: fixed; ">
+  <body style="background: #ededed; background-size: cover; background-position: center; background-attachment: fixed; ">
     <div class="container my-3">
       <div id="header"></div>
 
